--- a/hs-web/public/manifest.json
+++ b/hs-web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "HyperSynesthesia",
+  "name": "HyperSynesthesia",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo512.png",
+      "src": "icon1024.png",
       "type": "image/png",
       "sizes": "1024x1024"
     }
