--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,4 +27,4 @@ jobs:
         run: cd hs-web && npm ci && npm run build --if-present
 
       - name: Run Tests
-        run: npm test
+        run: cd hs-web && npm test
