--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,3 +28,27 @@ jobs:
 
       - name: Run Tests
         run: cd hs-web && npm test
+
+  deploy:
+
+    runs-on: ubuntu-latest
+
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Install Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Build Application
+        run: cd hs-web && npm ci && npm run build --if-present
+
+      - name: Deploy application
+        run: |
+          echo ${{secrets.SSH_KEY}} > ssh_key
+          ssh-add ./ssh_key
+          cd hs-web && scp -r build/* ${{secrets.SSH_USERNAME}@${{secrets.SSH_HOST}}}:/var/www/html
