--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,5 +49,5 @@ jobs:
 
       - name: Deploy application
         run: |
-          echo ${{secrets.SSH_KEY}} > .ssh/id_rsa
+          cat >> _EOF_ ${{secrets.SSH_KEY}} > .ssh/id_rsa
           cd hs-web && scp -r build/* ${{secrets.SSH_USERNAME}}@${{secrets.SSH_HOST}}}:/var/www/html
