--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,7 +48,9 @@ jobs:
         run: cd hs-web && npm ci && npm run build --if-present
 
       - name: Get SSH Key
-        run: printf %s "$DEPLOYMENT_KEY" > ~/.ssh/id_rsa
+        run: |
+          touch ~/.ssh/id_rsa
+          printf %s "$DEPLOYMENT_KEY" > ~/.ssh/id_rsa
         shell: bash
         env:
           DEPLOYMENT_KEY: ${{ secrets.SSH_KEY }}
