--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,13 @@ jobs:
       - name: Run Tests
         run: cd hs-web && npm test
 
+      - name: Upload Artifact
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v2
+        with:
+          name: hs-build
+          path: build/
+
   deploy:
 
     runs-on: ubuntu-latest
@@ -36,16 +43,10 @@ jobs:
     needs: build
     if: github.ref == 'refs/heads/main'
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
         with:
-          node-version: 18.x
-
-      - name: Build Application
-        run: cd hs-web && npm ci && npm run build --if-present
+          name: hs-build
 
       - name: Get SSH Key
         run: |
