--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: hs-build
-          path: build/
+          path: ./hs-web/build/
 
   deploy:
 
