--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -61,4 +61,4 @@ jobs:
       - run: chmod 600 ~/.ssh/id_rsa
 
       - name: Deploy application
-        run: cd hs-web && scp -r build/* ${{secrets.SSH_USERNAME}}@${{secrets.SSH_HOST}}:/var/www/html
+        run: scp -r build/* ${{secrets.SSH_USERNAME}}@${{secrets.SSH_HOST}}:/var/www/html
