Add build download dir

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: hs-build
+          path: build/
 
       - name: Get SSH Key
         run: |
