Add build download dir

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,6 +43,8 @@ jobs:
     needs: build
     if: github.ref == 'refs/heads/main'
     steps:
+      - run: mkdir build
+
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
