--- a/hs-web/package.json
+++ b/hs-web/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
